fix: address PR #53 review findings + audit suspicious @SuppressWarnings
- terminal resizer: per-cell color copies on resize, direct x-clamp
  instead of setCursorPos (avoids clobbering wrap/REP state)
- terminal buffer: guard copyRowRange margin math against negative
  copy length
- framebuffer device: named VRAM cap constant, volatile length instead
  of a redundant lock
- VMRunner: cycleLimit/cycles/runtimeError volatile for cross-thread
  visibility, with a justified single-writer suppression on the
  increment
- add missing test coverage: InetUtils/Ipv4Space prefix edge cases,
  VMRunner cycle/quota bounds and VMInitializationException path,
  CommonDeviceBusController state assertions
- remove 3 @SuppressWarnings that were masking real issues instead of
  documenting false positives: possible NPE in
  RedstoneInterfaceBlock#neighborChanged, dead null-check in
  AbstractItemDeviceBusElement#collectSyntheticDevices, missing null
  guard in ModShaders#configureProjectorsShader before shader compile